Fix tier and HP

--- a/extremes/worqor-lar-dor.yaml
+++ b/extremes/worqor-lar-dor.yaml
@@ -5,9 +5,9 @@ modified: 2024-07-02
 by:
   id: 27637301
   role: author
-tier: Endwalker
+tier: Dawntrail
 boss: Valigarmanda
-HP: 0
+HP: 61841486
 party_hp: 115000
 spoiler: true
 description: |
