--- a/calendar.yaml
+++ b/calendar.yaml
@@ -592,3 +592,8 @@
   url: https://na.finalfantasyxiv.com/lodestone/special/2024/The_Rising/kx9ry8yeix
   from: 2024-08-27 08:00:00
   to: 2024-09-11 14:59:00
+- name: Letter from the Producer Live Part LXXXIII
+  short: PLL LXXXIII
+  type: live letter
+  url: https://www.youtube.com/live/Hf79RkD_bG8
+  at: 2024-09-29 05:50:00
